@startuml

title __JUMP's Class Diagram__\n

  namespace  {
    namespace odal {
      namespace jump {
        abstract class modal.jump.Actor {
            + getJumpBehaviour()
            + isJumping()
            + performJump()
            + setJumpBehaviour()
            {abstract} + updatePosition()
        }
      }
    }
  }
  

  namespace  {
    namespace odal {
      namespace jump {
        interface modal.jump.JumpBehaviour {
            {abstract} + isJumping()
            {abstract} + jump()
            {abstract} + updatePosition()
        }
      }
    }
  }
  

  namespace  {
    namespace odal {
      namespace jump {
        class modal.jump.JumpHigh {
            ~ changeJumpMode : boolean
            ~ jumping : boolean
            - initialVelocity : int
            + JumpHigh()
            + isJumping()
            + jump()
            + updatePosition()
        }
      }
    }
  }
  

  namespace  {
    namespace odal {
      namespace jump {
        class modal.jump.JumpLow {
            ~ changeJumpMode : boolean
            ~ jumping : boolean
            - initialVelocity : int
            + JumpLow()
            + isJumping()
            + jump()
            + updatePosition()
        }
      }
    }
  }
  

  modal.jump.Actor o-- modal.jump.JumpBehaviour : jumpBehaviour
  modal.jump.JumpHigh .up.|> modal.jump.JumpBehaviour
  modal.jump.JumpHigh o-- view.CharacterView : characterView
  modal.jump.JumpLow .up.|> modal.jump.JumpBehaviour
  modal.jump.JumpLow o-- view.CharacterView : characterView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
